--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(GMLFile)
 export(GeoStatFiWFSClient)
 export(GeoStatFiWFSRequest)
+export(GeoserverHelFiWFSClient)
+export(GeoserverHelFiWFSRequest)
 export(WFSCachingClient)
 export(WFSCachingRequest)
 export(WFSClient)
@@ -24,6 +26,8 @@ export(sp2df)
 exportClasses(GMLFile)
 exportClasses(GeoStatFiWFSClient)
 exportClasses(GeoStatFiWFSRequest)
+exportClasses(GeoserverHelFiWFSClient)
+exportClasses(GeoserverHelFiWFSRequest)
 exportClasses(WFSCachingClient)
 exportClasses(WFSCachingRequest)
 exportClasses(WFSClient)
