--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Collate:
     'WFSClient.R'
     'GeoStatFi.R'
     'GeoserverHelFi.R'
+    'KarttaHelFi.R'
     'MML.R'
     'WFSRequest.R'
     'firstlib.R'
