--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,5 +45,7 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_set)
+importFrom(grDevices,rainbow)
 importFrom(rjson,fromJSON)
 importFrom(spdep,poly2nb)
+importFrom(utils,read.csv)
